--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <div class="webgl-content">
     <div id="gameContainer" style="width: 960px; height: 540px"></div>
 </div>
+<script src="TemplateData/responsive.js"></script>
 </body>
 </html>
